added better compatibility with SPICE